# cmake-demo

./: README.md
app/: CMakeLists.txt  main.cpp
my_library/: CMakeLists.txt
my_library/app/: CMakeLists.txt  main.cpp
my_library/cmake/: config.cmake.in  libconfig.cmake.in
my_library/wsa/: CMakeLists.txt
my_library/wsa/headers/: Wsa.h  wsui_global.h
my_library/wsa/sources/: Wsa.cpp  Wsa.ui
my_library/wsui/: CMakeLists.txt
my_library/wsui/headers/: CDialog.h  wsui_global.h
my_library/wsui/sources/: CDialog.cpp  CDialog.ui
